--- a/views/main.ejs
+++ b/views/main.ejs
@@ -21,8 +21,7 @@
  </head>
  <body>
 <center>
-<img src= "https://encryptedtbn0.gstatic.com/images?q=tbn:ANd9GcSE65xZ9tUWsRzustJpOZ1rWiA
--veUSfL9mNNZG7-Y6Rqb2j5nz" alt="ibm_logo"width="200"
+<img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/IBM_logo.svg/1280px-IBM_logo.svg.png" alt="ibm_logo"width="200"
 height="150" >
 <br>
 </center>
